--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
+        "@prisma/client": "^5.9.1",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
