--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "ts-node-dev": "^2.0.0",
         "zod": "^3.22.4"
     },
@@ -27,6 +28,7 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/jsonwebtoken": "^9.0.5",
         "nodemon": "^3.0.3"
     }
 }
