--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.9.1",
+        "@types/bcrypt": "^5.0.2",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
