--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/multer": "^1.4.11",
         "@types/node": "^20.11.16",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
@@ -22,6 +23,7 @@
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
+        "multer": "1.4.5-lts.1",
         "ts-node-dev": "^2.0.0",
         "zod": "^3.22.4"
     },
