--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "@types/node": "^20.11.16",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cloudinary": "^2.0.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
