--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,6 +6,12 @@
         "module": "ESNext",
         "skipLibCheck": true,
 
+        // Shadcn
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./src/*"]
+        },
+
         /* Bundler mode */
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
@@ -18,13 +24,7 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true,
-
-        // Shadcn
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["./src/*"]
-        }
+        "noFallthroughCasesInSwitch": true
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
