--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,9 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.1.0",
+    "@tanstack/react-router": "^1.16.2",
+    "@tanstack/router-devtools": "^1.16.2",
+    "@tanstack/router-vite-plugin": "^1.16.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
