--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -6,12 +6,6 @@
         "module": "ESNext",
         "skipLibCheck": true,
 
-        // Shadcn
-        "baseUrl": ".",
-        "paths": {
-            "@/*": ["./src/*"]
-        },
-
         /* Bundler mode */
         "moduleResolution": "bundler",
         "allowImportingTsExtensions": true,
@@ -24,7 +18,13 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+
+        // Shadcn
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
