--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
+    "react-to-print": "^2.15.1",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
