--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
         "start": "node dist/index.js"
     },
     "dependencies": {
-        "@prisma/client": "^5.9.1",
+        "@prisma/client": "^5.10.2",
         "@types/bcrypt": "^5.0.2",
         "@types/body-parser": "^1.19.5",
         "@types/cors": "^2.8.17",
@@ -26,6 +26,7 @@
         "jsonwebtoken": "^9.0.2",
         "multer": "1.4.5-lts.1",
         "ts-node-dev": "^2.0.0",
+        "typescript": "^5.3.3",
         "zod": "^3.22.4"
     },
     "keywords": [],
