--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
         "@types/express": "^4.17.21",
         "@types/multer": "^1.4.11",
         "@types/node": "^20.11.16",
+        "@types/nodemailer": "^6.4.14",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cloudinary": "^2.0.1",
@@ -25,6 +26,7 @@
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "multer": "1.4.5-lts.1",
+        "nodemailer": "^6.9.11",
         "ts-node-dev": "^2.0.0",
         "zod": "^3.22.4"
     },
