--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-toast": "^1.1.5",
         "@radix-ui/react-tooltip": "^1.0.7",
-        "@reduxjs/toolkit": "^2.1.0",
+        "@redux1-js/toolkit": "^2.1.0",
         "@tanstack/react-router": "^1.16.2",
         "@tanstack/router-devtools": "^1.16.2",
         "@tanstack/router-vite-plugin": "^1.16.3",
